CHANGELOG for Fall of Eden
--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.4d
------------
* Fixed a bug in the combat code that'd cause the fight against Layla to break.
* Fixed a bug in the code that'd break Out of Combat abilities. First Aid/Heal should work again.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4c
------------
* Yet more typo fixes
* Twopenny's armor shop added to Rigard shop street (The Observer)
* Asche's magic shop added to Rigard shop street (The Observer)
* Continuation on the combat rewrite:
 - Fixed some typos and borked stuff
 - Cooldowns on Bash/Grand slam reduced
 - The rest of the physical skills replaced
 - EnemySkills replaced: Scorpion, Orchid, Gol, Corishev
 - All seduction skills replaced
 - All black magic replaced
 - Most healing spells replaced
* Cveta's Lull ability replaced with Dischord, a physical defense debuff that becomes more potent the higher the lust of the target.
* Kyna is locked to debug mode. I'll leave her where she is for now, but she's likely going to be removed at some point in the future.
* The outlaws intro tweaked slightly (Zenith)
* Added a short, alternate hypnotist scene to the desert naga that doesn't require you to have lost to her. You need to have mastered hypnotist.
* Race structure rewritten. Might introduce some wierdness, so keep on the lookout.

Version 0.4b
------------
* Alchemy menu is sorted alphabetically
* Added a weak health potion. Can be bought from Patchwork
* A metric fuckton of typos and minor bugs fixed (thanks CalmKhaos!)
* Combat rewrite (not much of this is instantiated yet, just the basic framwork that makes it possible)
 - Damage types (more flexible basic attack). Damage hp/sp/lp
 - Delayed actions/casting time
 - Retargetting (fallen)
 - Ability cooldowns
 - Making parser usage easier!