@@ -9,6 +9,7 @@ Version 0.4d
 ------------
 * Fixed a bug in the combat code that'd cause the fight against Layla to break.
 * Fixed a bug in the code that'd break Out of Combat abilities. First Aid/Heal should work again.
+* Some additional Asche fortunes
 
 --------------------------------------------
              PREVIOUS VERSIONS
